--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.2",
     "@heroicons/react": "^2.0.18",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.17",
