--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.2",
     "@heroicons/react": "^2.0.18",
+    "@supabase/supabase-js": "^2.38.4",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
