--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "plums",
   "version": "0.1.0",
+  "prisma": {
+   "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -21,7 +24,7 @@
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.17",
-    "@types/node": "^20",
+    "@types/node": "^20.10.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
@@ -29,6 +32,7 @@
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   }
 }
