--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "plums",
   "version": "0.1.0",
   "prisma": {
-   "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "private": true,
   "scripts": {
@@ -16,10 +16,10 @@
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.6.0",
     "@vercel/postgres": "^0.5.1",
-    "next": "13.5.4",
+    "next": "^14.0.3",
     "prisma": "^5.6.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
@@ -29,7 +29,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3",
     "ts-node": "^10.9.1",
