--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.2",
@@ -28,8 +27,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "^14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3",
     "ts-node": "^10.9.1",
